--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ Thumbs.db
 
 # Compiled files
 *.pyc
+discovered_resources.json
+
+# SAM build artifacts
+.aws-sam/
+packaged.yaml
+samconfig.toml.bak
