Fix sam deploy using YAML folded scalar

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -139,8 +139,14 @@ jobs:
           name: packaged-template-${{ matrix.environment }}
 
       - name: SAM Deploy
-        run: |
-          sam deploy --template-file packaged.yaml --stack-name cloudauditor-${{ matrix.environment }} --capabilities CAPABILITY_NAMED_IAM --parameter-overrides Environment=${{ matrix.environment }} DatabaseMasterPassword=${{ secrets.DB_PASSWORD }} --no-fail-on-empty-changeset --no-confirm-changeset
+        run: >
+          sam deploy
+          --template-file packaged.yaml
+          --stack-name cloudauditor-${{ matrix.environment }}
+          --capabilities CAPABILITY_NAMED_IAM
+          --parameter-overrides Environment=${{ matrix.environment }} DatabaseMasterPassword=${{ secrets.DB_PASSWORD }}
+          --no-fail-on-empty-changeset
+          --no-confirm-changeset
 
       - name: Get Stack Outputs
         id: stack-outputs
