Add missing Resource Explorer 2 permissions to Lambda role

--- a/template.yaml
+++ b/template.yaml
@@ -394,6 +394,8 @@ Resources:
                 Action:
                   - resource-explorer-2:Search
                   - resource-explorer-2:ListIndexes
+                  - resource-explorer-2:GetIndex
+                  - resource-explorer-2:ListSupportedResourceTypes
                   - resource-explorer-2:GetResource
                   - config:DescribeConfigurationRecorders
                   - config:DescribeConfigurationRecorderStatus
