--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ psycopg2-binary>=2.9.9
 beautifulsoup4>=4.12.0
 
 # HTTP library for Python
-requests>=2.32.0
+
+# Reporting dependencies
+pandas>=2.2.3
+openpyxl>=3.1.5
