--- a/template.yaml
+++ b/template.yaml
@@ -360,6 +360,18 @@ Resources:
           - Id: DeleteOldReports
             Status: Enabled
             ExpirationInDays: 30
+      CorsConfiguration:
+        CorsRules:
+          - AllowedOrigins:
+              - 'https://fleetmarshal.cloud'
+              - 'https://fleetmarshal.jonathanglass.cloud'
+              - 'https://d17pzomm5gtdxh.cloudfront.net'
+              - 'http://localhost:5173'
+            AllowedMethods:
+              - GET
+            AllowedHeaders:
+              - '*'
+            MaxAge: 3600
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: true
