feat: Introduce GitHub Actions workflow for automated testing, building, and deploying CloudAuditor to AWS environments.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -196,6 +196,7 @@ jobs:
             --function-name cloudauditor-discovery-${{ matrix.environment }} \
             --payload '{"test": true}' \
             --cli-binary-format raw-in-base64-out \
+            --cli-read-timeout 120 \
             response.json
           cat response.json
 
